# dataland-user-service/src/main/kotlin/org/dataland/userservice/controller/PortfolioController.kt
@@ -2,12 +2,14 @@ package org.dataland.userservice.controller
 
 import org.dataland.keycloakAdapter.auth.DatalandAuthentication
 import org.dataland.userservice.api.PortfolioApi
+import org.dataland.userservice.exceptions.PortfolioNotFoundApiException
 import org.dataland.userservice.model.Portfolio
 import org.dataland.userservice.service.PortfolioService
 import org.springframework.beans.factory.annotation.Autowired
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
+import java.util.UUID
 
 /**
  * RestController for the Portfolio API
@@ -20,39 +22,61 @@ class PortfolioController
     ) : PortfolioApi {
         override fun getAllPortfoliosForCurrentUser(): ResponseEntity<List<Portfolio>> {
             val userId = DatalandAuthentication.fromContext().userId
-            return ResponseEntity.ok(portfolioService.getAllPorfoliosForUser(userId))
+            val correlationId = UUID.randomUUID().toString()
+            return ResponseEntity.ok(portfolioService.getAllPortfoliosForUser(userId, correlationId))
         }
 
         override fun getPortfolio(portfolioId: String): ResponseEntity<Portfolio> {
             val userId = DatalandAuthentication.fromContext().userId
-            return ResponseEntity.ok(portfolioService.getPortfolioForUser(userId, portfolioId))
+            val correlationId = UUID.randomUUID().toString()
+            return ResponseEntity.ok(portfolioService.getPortfolioForUser(userId, portfolioId, correlationId))
         }
 
         override fun patchPortfolio(
             portfolioId: String,
             companyId: String,
         ): ResponseEntity<Portfolio> {
-            TODO("Not yet implemented")
+            val userId = DatalandAuthentication.fromContext().userId
+            val correlationId = UUID.randomUUID().toString()
+            return ResponseEntity.ok(portfolioService.addCompany(userId, portfolioId, companyId, correlationId))
         }
 
-        override fun postPortfolio(portfolio: Portfolio): ResponseEntity<Portfolio> =
-            ResponseEntity(portfolioService.savePortfolio(portfolio), HttpStatus.CREATED)
+        override fun createPortfolio(portfolio: Portfolio): ResponseEntity<Portfolio> {
+            val userId = DatalandAuthentication.fromContext().userId
+            val correlationId = UUID.randomUUID().toString()
+            return ResponseEntity(portfolioService.createPortfolio(userId, portfolio, correlationId), HttpStatus.CREATED)
+        }
 
         override fun replacePortfolio(
             portfolioId: String,
             portfolio: Portfolio,
         ): ResponseEntity<Portfolio> {
-            TODO("Not yet implemented")
+            val userId = DatalandAuthentication.fromContext().userId
+            val correlationId = UUID.randomUUID().toString()
+            if (!portfolioService.existsPortfolioForUser(userId, portfolioId, correlationId)) {
+                throw PortfolioNotFoundApiException(portfolioId, correlationId)
+            }
+            return ResponseEntity.ok(portfolioService.replacePortfolio(userId, portfolio, portfolioId, correlationId))
         }
 
         override fun deletePortfolio(portfolioId: String): ResponseEntity<Unit> {
-            TODO("Not yet implemented")
+            val userId = DatalandAuthentication.fromContext().userId
+            val correlationId = UUID.randomUUID().toString()
+            return ResponseEntity(
+                portfolioService.deletePortfolio(userId, portfolioId, correlationId),
+                HttpStatus.NO_CONTENT,
+            )
         }
 
         override fun removeCompanyFromPortfolio(
             portfolioId: String,
             companyId: String,
         ): ResponseEntity<Unit> {
-            TODO("Not yet implemented")
+            val userId = DatalandAuthentication.fromContext().userId
+            val correlationId = UUID.randomUUID().toString()
+            return ResponseEntity(
+                portfolioService.removeCompanyFromPortfolio(userId, portfolioId, companyId, correlationId),
+                HttpStatus.NO_CONTENT,
+            )
         }
     }
